--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
-    "vite": "^5.2.8"
-  }
+"devDependencies": {
+  "@vitejs/plugin-react": "4.2.0",
+  "vite": "5.0.10"
+}
+
 }
