--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
+
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/api/(.*)", "destination": "https://tu-backend-publico/api/$1" }
   ]
 }
